force-app/main/default/objects/Due_Diligence_Escalation__c/Due_Diligence_Escalation__c.object-meta.xml
<CustomObject>
    <label>Due Diligence Escalation</label>
    <nameField>
        <displayFormat>DDE-{00000}</displayFormat>
        <label>Escalation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence Escalation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>