force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Assignee_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Notification_Sent__c</fullName>
    <label>Assignee Notification Sent</label>
    <type>Date</type>
</CustomField>