force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Completion_Date_old__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_old__c</fullName>
    <formula>If(Resolved__c=True,Today(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date old</label>
    <type>Date</type>
</CustomField>