force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Completion_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notification_Sent__c</fullName>
    <label>Completion Notification Sent</label>
    <type>Date</type>
</CustomField>