force-app/main/default/objects/Due_Diligence_Escalation__c/fields/DD_Revison__c.field-meta.xml
<CustomField>
    <fullName>DD_Revison__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DD Revison</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>