force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Risk Rating Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>