force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>