force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Risk_Rating_Downgrade_Comment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Downgrade_Comment__c</fullName>
    <label>Risk Rating Downgrade Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>