force-app/main/default/objects/Due_Diligence_Escalation__c/fields/Risk_Rating_Downgrade_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating_Downgrade_Status__c</fullName>
    <label>Downgrade Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>