force-app/main/default/objects/Due_Diligence_Escalation__c/recordTypes/Risk_Rating_Review.recordType-meta.xml
<RecordType>
    <fullName>Risk_Rating_Review</fullName>
    <active>true</active>
    <label>Risk Rating Review</label>
</RecordType>