force-app/main/default/objects/Due_Diligence_Escalation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name__c</columns>
    <columns>Trading_As__c</columns>
    <columns>NAME</columns>
    <columns>Escalated_To__c</columns>
    <columns>Escalation_Date__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Escalation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>