force-app/main/default/objects/Due_Diligence_Escalation__c/listViews/My_Escalations_Awaiting_Resolution.listView-meta.xml
<ListView>
    <fullName>My_Escalations_Awaiting_Resolution</fullName>
    <columns>Account_Name__c</columns>
    <columns>Trading_As__c</columns>
    <columns>NAME</columns>
    <columns>Escalated_To__c</columns>
    <columns>Escalation_Date__c</columns>
    <columns>Completion_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Resolved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Escalations Awaiting Resolution</label>
</ListView>