force-app/main/default/objects/Due_Diligence_Escalation__c/listViews/Referral_Queue_Due_Diligence_Escalation.listView-meta.xml
<ListView>
    <fullName>Referral_Queue_Due_Diligence_Escalation</fullName>
    <filterScope>Queue</filterScope>
    <label>Referral Queue</label>
    <queue>Referral_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>